Fix alignment

--- a/assets/sass/_elements.scss
+++ b/assets/sass/_elements.scss
@@ -4,6 +4,7 @@ ul {
 }
 &-main > ul {
   margin-left: 0;
+  margin-top: 0;
 }
 
 input[type="text"],
